--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
@@ -13,7 +16,9 @@
 
 
 <style>
+	@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     html, body {
         background-color: #25282c;
+		font-family: 'Poppins', sans-serif;
     }
 </style>
