--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="%sveltekit.assets%/global.css">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
@@ -15,10 +16,3 @@
 </html>
 
 
-<style>
-	@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-    html, body {
-        background-color: #25282c;
-		font-family: 'Poppins', sans-serif;
-    }
-</style>
